# guardrails

./: CLAUDE.md  README.md  pyproject.toml
background/: foundations_concept.md
docs/moq-for-agents/: chapter1.md  chapter2.md  chapter3.md  chapter4.md  chapter5.md  chapter6.md
docs/moq-for-agents/grok_originals/: chapter1.md  chapter3.md  chapter4.md  chapter5.md  chapter6.md  outline.md  rule_0.md  story_template.md  task_template.md
docs/moq-for-agents/org_edits/: chapter1.org  chapter2.org  chapter_reviews.org  doc_note.org
iterations/first/: CLAUDE.md  claude-conversation-2025-11-09-3a9c2598.md
iterations/first/ai_docs/: intro.md  process_definition.md
iterations/first/ai_docs/background/: foundations_concept.md  (+1 more)
iterations/first/process_docs/: inspection_report_1.md
iterations/pass_2/: claude-conversation-2025-11-12-07412c2f.md
iterations/pass_2/inputs/: story1.md  story1.org
iterations/pass_2/outputs/: guardrails_action_plan.md  interview_outcome_1_story_type_rules.md  interview_outcome_2_autonomy_spectrum.md  interview_outcome_3_minimal_specification_principle.md  interview_outcome_4_subjective_evaluation.md  interview_outcome_5_lightweight_workflow.md  interview_outcome_6_directives_library.md  story1_feedback_interview_plan.md  story1_revised.md
iterations/pass_3/inputs/: meta_project_relationship.md  prompt1.md
partials/general/: overview.org
partials/phases/: exploring.yaml  pioneering.yaml
partials/roles/: code_reviewer.yaml  coder.yaml  project_manager.yaml
scripts/: main.py
src/guardrails/: dataservice.py
tools/: org2md.py
(+2 files in other folders)
